Bug 452512 - Many panel applets' Full Representations are too small in frameworks 5.93
Summary: Many panel applets' Full Representations are too small in frameworks 5.93
Status: RESOLVED FIXED
Alias: None
Product: libplasma
Classification: Frameworks and Libraries
Component: libplasma (show other bugs)
Version: 5.93.0
Platform: Fedora RPMs Linux
: VHI major
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: regression
: 452602 452607 452615 452650 454300 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-04-11 18:29 UTC by Colin J Thomson
Modified: 2022-05-24 17:35 UTC (History)
13 users (show)

See Also:
Latest Commit:
Version Fixed In: 5.94


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Colin J Thomson 2022-04-11 18:29:35 UTC
SUMMARY:
I have the Sticky Notes app in my Taskbar and it does not raise correctly when clicking on it. I just get a tiny square popup.
I tested it on the Desktop (folder view) and it works as it should. Here I rolled back the kf5-plasma package to 5.92 and all works as it should.

ZaWertun who maintains the fedora-copr-kde5 COPR  Confirmed - reverting commit:
https://invent.kde.org/frameworks/plasma-framework/-/commit/29d31c159503e454b3c483b0b7eb180ce0ee926a 
fixes this issue.

STEPS TO REPRODUCE
1. Have the sticky notes in the taskbar and attempt to open by clicking on it. 

OBSERVED RESULT
It fails to open correctly, a tiny square just pops up so not unusable. 

EXPECTED RESULT
It should open up fully when clicked, when placed in the Taskbar like it does on the Desktop.

SOFTWARE/OS VERSIONS
Operating System: Fedora Linux 36
KDE Plasma Version: 5.24.4
KDE Frameworks Version: 5.93.0
Qt Version: 5.15.3
Kernel Version: 5.17.2-300.fc36.x86_64 (64-bit)
Graphics Platform: X11
Graphics Processor: NVIDIA GeForce GT 1030/PCIe/SSE2
Comment 1 Nate Graham 2022-04-12 16:24:02 UTC
Can confirm the issue and that this commit regressed it.
Comment 2 Aleix Pol 2022-04-13 17:50:29 UTC
Git commit b62d83bef7733e4943e6f66787166b41198d1359 by Aleix Pol.
Committed on 13/04/2022 at 14:15.
Pushed by ngraham into branch 'master'.

Dialog: Do not update layout parameters while hidden

Wait until the dialog it's shown to position the components within.
Otherwise we do it based on a random size.

M  +1    -1    src/plasmaquick/dialog.cpp

https://invent.kde.org/frameworks/plasma-framework/commit/b62d83bef7733e4943e6f66787166b41198d1359
Comment 3 Nate Graham 2022-04-14 14:32:51 UTC
*** Bug 452607 has been marked as a duplicate of this bug. ***
Comment 4 Nate Graham 2022-04-14 14:32:56 UTC
*** Bug 452602 has been marked as a duplicate of this bug. ***
Comment 5 Nate Graham 2022-04-14 14:34:23 UTC
JFYI I have notified packagers about backporting the fix to Frameworks 5.93 (because Frameworks doesn't have minor bugfix releases). So if you're still experiencing the issue, go bug your distros' packagers to get on that. :)
Comment 6 Nate Graham 2022-04-18 15:53:11 UTC
*** Bug 452650 has been marked as a duplicate of this bug. ***
Comment 7 Nate Graham 2022-04-18 15:54:04 UTC
*** Bug 452615 has been marked as a duplicate of this bug. ***
Comment 8 Trent M 2022-05-05 17:55:42 UTC
(In reply to Nate Graham from comment #5)
> JFYI I have notified packagers about backporting the fix to Frameworks 5.93
> (because Frameworks doesn't have minor bugfix releases). So if you're still
> experiencing the issue, go bug your distros' packagers to get on that. :)

What if the distro is Neon? I've brought it up in several Matrix channels to radio silence.
Comment 9 Nate Graham 2022-05-05 18:31:48 UTC
Neon devs never seem interested in backporting fixes. I don't think that's a goal of the distro. "Always echo upstream KDE" more or less.
Comment 10 Nate Graham 2022-05-24 17:35:03 UTC
*** Bug 454300 has been marked as a duplicate of this bug. ***