Dialog: Do not update layout parameters while hidden

Wait until the dialog it's shown to position the components within.
Otherwise we do it based on a random size.

BUG: 452512